TEST_PROGRAMS/VALID/07/typecast.go
package main

func main() {
	x = float64(x)
	y = int(y)
	z=num(z)
	x = /*string*/ int (y)
}
