TEST_PROGRAMS/INVALID/04/16.go
package main

func main() {
    //Illegal escape in interpreted string
    var x = "\x"
    x++ // "use" x
}
